# Linked-wallets-rust

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/linked_wallets/: Cargo.toml
programs/linked_wallets/src/: lib.rs
scripts/: _common.ts  add_wallet.ts  get_wallets.ts  is_linked.ts  remove_wallet.ts  update_wallet.ts
tests/: linked_wallets.ts
